// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultCard should render differently when ResultCard is clicked 1`] = `
<article
  onClick={[Function]}
>
  <section
    className="result-card-section"
  >
    <div>
      <h3
        className="result-card-h3"
      >
        Old Hickory Steakhouse
      </h3>
      <h4>
        Oxon Hill, MD
      </h4>
      <h3 />
    </div>
    <div>
      <button
        className="genre-tag-btn"
        key="679199950804.1945"
      >
        Steak
      </button>
      <button
        className="genre-tag-btn"
        key="618223098624.8542"
      >
        American
      </button>
      <button
        className="genre-tag-btn"
        key="197330976093.94327"
      >
        Contemporary
      </button>
      <button
        className="genre-tag-btn"
        key="897193641942.3282"
      >
        Seafood
      </button>
      <button
        className="genre-tag-btn"
        key="47806346992.00138"
      >
        Cafe
      </button>
    </div>
  </section>
  <div
    className="additional-info-div"
  >
    <h3>
      Additional Info
    </h3>
    <section>
      <div>
        <h4>
          Address:
        </h4>
        <h5>
          201 Waterfront St
        </h5>
        <h5>
          Oxon Hill, MD
        </h5>
        <h5>
          20745
        </h5>
      </div>
      <div>
        <h4>
          Phone:
        </h4>
        <h5>
          (301) 965-4000
        </h5>
      </div>
      <div
        className="hours-div"
      >
        <h4>
          Hours of Operation:
        </h4>
        <h5>
          Open Daily 5:30 PM-10:00 PM
        </h5>
      </div>
      <div
        className="tags-container-div"
      >
        <h4>
          Tags:
        </h4>
        <button
          className="genre-tag-btn"
          key="1466322536778.6714"
        >
          Social
        </button>
        <button
          className="genre-tag-btn"
          key="195548699037.32477"
        >
          Food and Dining
        </button>
        <button
          className="genre-tag-btn"
          key="1489214701997.1846"
        >
          Restaurants
        </button>
        <button
          className="genre-tag-btn"
          key="1141115244979.5771"
        >
          Steakhouses
        </button>
      </div>
    </section>
  </div>
</article>
`;

exports[`ResultCard should render the snapshot 1`] = `
<article
  onClick={[Function]}
>
  <section
    className="result-card-section"
  >
    <div>
      <h3
        className="result-card-h3"
      >
        Old Hickory Steakhouse
      </h3>
      <h4>
        Oxon Hill, MD
      </h4>
      <h3 />
    </div>
    <div>
      <button
        className="genre-tag-btn"
        key="434503411844.36865"
      >
        Steak
      </button>
      <button
        className="genre-tag-btn"
        key="720015119374.6793"
      >
        American
      </button>
      <button
        className="genre-tag-btn"
        key="1112164907789.0022"
      >
        Contemporary
      </button>
      <button
        className="genre-tag-btn"
        key="9178867111.464867"
      >
        Seafood
      </button>
      <button
        className="genre-tag-btn"
        key="1125924972531.1506"
      >
        Cafe
      </button>
    </div>
  </section>
</article>
`;
